force-app/main/default/objects/Camp__c/Camp__c.object-meta.xml
<CustomObject>
    <description>this object for manage camp class</description>
    <label>Camp</label>
    <nameField>
        <label>Camp  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Camps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>