force-app/main/default/objects/Camp__c/fields/Camp_capacity__c.field-meta.xml
<CustomField>
    <fullName>Camp_capacity__c</fullName>
    <description>this field for camp class for manage camp capacity</description>
    <label>Camp capacity</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>