force-app/main/default/objects/Camp__c/fields/Camp_Description__c.field-meta.xml
<CustomField>
    <fullName>Camp_Description__c</fullName>
    <description>this field for camp class for manage Camp Description</description>
    <label>Camp Description</label>
    <type>TextArea</type>
</CustomField>