force-app/main/default/objects/Camp__c/fields/Centre__c.field-meta.xml
<CustomField>
    <fullName>Centre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>this field for camp class for manage Location/Centre</description>
    <label>Location/Centre</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Centre</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Camps</relationshipLabel>
    <relationshipName>Camps</relationshipName>
    <type>Lookup</type>
</CustomField>