force-app/main/default/objects/Camp__c/fields/Early_Bird_Discount__c.field-meta.xml
<CustomField>
    <fullName>Early_Bird_Discount__c</fullName>
    <description>this field for manage discount if any user enrolled middle of Early Birds dates</description>
    <label>Early Bird Discount %</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>