force-app/main/default/objects/Camp__c/fields/Early_Bird_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Early_Bird_Start_Date__c</fullName>
    <description>this field for manage discount if any user enrolled date is greater then this field</description>
    <label>Early Bird Start Date</label>
    <type>Date</type>
</CustomField>