force-app/main/default/objects/Camp__c/fields/Maximum_Age__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Age__c</fullName>
    <description>this field for camp class for manage camp enrol student Maximum Age</description>
    <label>Maximum Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>