force-app/main/default/objects/Camp__c/fields/Minimum_Age__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Age__c</fullName>
    <description>this field for camp class for manage camp enrol student Minimum Age</description>
    <label>Minimum Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>