force-app/main/default/objects/Camp__c/listViews/All_Active_Camps.listView-meta.xml
<ListView>
    <fullName>All_Active_Camps</fullName>
    <columns>NAME</columns>
    <columns>Centre__c</columns>
    <columns>Status__c</columns>
    <columns>Camp_capacity__c</columns>
    <columns>Maximum_Age__c</columns>
    <columns>Minimum_Age__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>All Active Camps</label>
</ListView>