force-app/main/default/objects/Camp__c/listViews/All_Camp.listView-meta.xml
<ListView>
    <fullName>All_Camp</fullName>
    <columns>NAME</columns>
    <columns>Centre__c</columns>
    <columns>Status__c</columns>
    <columns>Maximum_Age__c</columns>
    <columns>Minimum_Age__c</columns>
    <columns>Camp_capacity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Camp</label>
</ListView>